--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,12 @@
 
 buildscript {
     ext {
-        compose_version = '1.2.1'
+        compose_version = '1.3.1'
         compose_compiler_version = '1.3.0'
         nav_version = '2.5.3'
         room_version = '2.4.3'
         arch_lifecycle_version = '2.5.1'
+        activity_compose_version = '1.6.1'
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
