--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
+    implementation "com.google.accompanist:accompanist-themeadapter-material:0.28.0"
     implementation 'com.google.android.material:material:1.7.0'
-
     // Compose
     implementation "androidx.activity:activity-compose:1.6.1"
     implementation "androidx.compose.material:material:material"
