--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 /*
- * Copyright (C) 2022 The Android Open Source Project
+ * Copyright (C) 2023 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,7 +17,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp' version "1.7.20-1.0.6"
+    id 'com.google.devtools.ksp' version "1.8.21-1.0.11"
 }
 
 android {
@@ -26,7 +26,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.juicetracker"
-        minSdk 21
+        minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -41,11 +41,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
+        freeCompilerArgs += "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api"
+        freeCompilerArgs += "-opt-in=androidx.compose.material.ExperimentalMaterialApi"
     }
     buildFeatures {
         compose true
@@ -57,18 +59,19 @@ android {
 
 dependencies {
 
-    implementation platform('androidx.compose:compose-bom:2022.11.00')
+    implementation platform('androidx.compose:compose-bom:2023.05.01')
 
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation "androidx.activity:activity-compose:1.7.2"
     implementation "androidx.compose.material:material"
+    implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.core:core-ktx:1.10.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$arch_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$arch_lifecycle_version"
-    implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "com.google.android.material:material:1.9.0"
     ksp "androidx.room:room-compiler:$room_version"
     debugImplementation "androidx.compose.ui:ui-tooling"
 }
