--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,15 +61,14 @@ android {
 }
 
 dependencies {
-    implementation platform('androidx.compose:compose-bom:2023.05.01')
+    implementation platform('androidx.compose:compose-bom:2023.06.00')
 
-    implementation "androidx.activity:activity-compose:1.7.2"
+    implementation "androidx.activity:activity-compose"
     implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "androidx.compose.material:material"
     implementation "androidx.compose.material3:material3"
     implementation "androidx.core:core-ktx:1.10.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
-    implementation "androidx.fragment:fragment-ktx:1.5.7"
+    implementation "androidx.fragment:fragment-ktx:1.6.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$arch_lifecycle_version"
@@ -79,7 +78,10 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    implementation "com.google.accompanist:accompanist-themeadapter-material:0.28.0"
+    implementation "com.google.accompanist:accompanist-themeadapter-material3:0.28.0"
     implementation 'com.google.android.material:material:1.9.0'
+
+    debugImplementation "androidx.compose.ui:ui-tooling"
+
     ksp "androidx.room:room-compiler:$room_version"
 }
