--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ android {
     kotlinOptions {
         jvmTarget = '17'
         freeCompilerArgs += "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api"
-        freeCompilerArgs += "-opt-in=androidx.compose.material.ExperimentalMaterialApi"
     }
     buildFeatures {
         compose true
@@ -59,10 +58,9 @@ android {
 
 dependencies {
 
-    implementation platform('androidx.compose:compose-bom:2023.05.01')
+    implementation platform('androidx.compose:compose-bom:2023.06.00')
 
-    implementation "androidx.activity:activity-compose:1.7.2"
-    implementation "androidx.compose.material:material"
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
